--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
+      data-rh="true"
     />
+    <meta
+      name="google-site-verification"
+      content="sZs_DrE3hYTKQux4gO0PvpZKAQE32UZF-shTlPdioYg"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
